[gd_scene load_steps=7 format=3 uid="uid://cwjaxyrgbnw7k"]

[ext_resource type="Script" uid="uid://dk4ikc8gf781h" path="res://source/assets/ui/menus/in_journal_note_menu.gd" id="1_7m487"]
[ext_resource type="Theme" uid="uid://cuilhrwln20t4" path="res://source/assets/ui/buttons/button_theme_no_icon.tres" id="4_cesfo"]
[ext_resource type="PackedScene" uid="uid://cvhwjelug7bvn" path="res://source/assets/ui/notes/starting_room_note.tscn" id="5_ydejp"]
[ext_resource type="FontFile" uid="uid://c1wdfxdb26j27" path="res://source/assets/fonts/Quikhand.ttf" id="6_cl3xk"]
[ext_resource type="PackedScene" uid="uid://g0y4eb2el458" path="res://source/assets/ui/buttons/iconless_button.tscn" id="8_e3c70"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qnnfj"]

[node name="in_journal_note_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_7m487")

[node name="cont" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="v_box_cont" type="VBoxContainer" parent="cont"]
layout_mode = 2

[node name="scroll_cont" type="ScrollContainer" parent="cont/v_box_cont"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_cesfo")

[node name="text" parent="cont/v_box_cont/scroll_cont" instance=ExtResource("5_ydejp")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.811765, 0.517647, 0.294118, 1)
theme_override_fonts/font = ExtResource("6_cl3xk")
text = "The plague which has been ravaging the servants recently is most concerning. As of one month ago, when reports began to arise, those who showed symptoms had spent a significant amount of time in the depths, while many of the recent reports have come from men who have not spent any time in the depths.

Though my attempts to synthesize a cure have been progressing at a steady rate, the number of reports of similar symptoms has begun to rapidly increase. I've decided to name the ailment Vitriscet.
[PAGE]
I fear the plague will spread faster than I can work to contain it, as even the most recent iteration of the cure is only effective for a very brief duration, after which the symptoms begin to manifest themselves again."

[node name="h_box_cont" type="HBoxContainer" parent="cont/v_box_cont"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("4_cesfo")
alignment = 1

[node name="back_button" parent="cont/v_box_cont/h_box_cont" instance=ExtResource("8_e3c70")]
layout_mode = 2
text = "Back"

[node name="separator" type="VSeparator" parent="cont/v_box_cont/h_box_cont"]
visible = false
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qnnfj")

[node name="left_button" parent="cont/v_box_cont/h_box_cont" instance=ExtResource("8_e3c70")]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Prev"

[node name="separator2" type="VSeparator" parent="cont/v_box_cont/h_box_cont"]
visible = false
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qnnfj")

[node name="right_button" parent="cont/v_box_cont/h_box_cont" instance=ExtResource("8_e3c70")]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Next"

[node name="page_number" type="Label" parent="cont/v_box_cont/h_box_cont"]
visible = false
custom_minimum_size = Vector2(75, 0)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 8
text = "Page 1/2"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="cont/v_box_cont/h_box_cont"]
visible = false
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qnnfj")

[connection signal="pressed" from="cont/v_box_cont/h_box_cont/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="cont/v_box_cont/h_box_cont/left_button" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="cont/v_box_cont/h_box_cont/right_button" to="." method="_on_right_button_pressed"]
